--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "bytepushers-myfamily",
+  "description": "This is family reunion web/mobile application that will allow family members to stay connected and advertise upcoming reunions via social media.",
   "version": "0.0.0",
   "homepage": "https://github.com/angular/angular-seed",
   "license": "MIT",
